Fix bug of client Connect and  modify Connect() and Bind().

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,10 +1,13 @@
 CFLAGS += -g -Wall
-PROGS = socket_client
+PROGS = socket_client.o client
 
 all: $(PROGS)
 
-socket_client: main.cpp socket_client.h
-	g++ $(CFLAGS) -o $@ $<
+socket_client.o: socket_client.cpp socket_client.h
+	g++ $(CFLAGS) -c -o $@ $<
+
+client: main.cpp
+	g++ $(CFLAGS) -o $@ $< socket_client.o
 
 clean:
-	rm -rf socket_client
+	rm -rf client socket_client.o
