--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ client/client
 server/server
 multi_thread/server_multi_thread
 multi_thread/client_multi_thread
+epoll/server_epoll
+epoll/client_epoll
 
