Modify Makefile of epoll_select

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ multi_thread/server_multi_thread
 multi_thread/client_multi_thread
 epoll/server_epoll
 epoll/client_epoll
-
+epoll_select/server
+epoll_select/client
