--- a/epoll_select/Makefile
+++ b/epoll_select/Makefile
@@ -1,12 +1,12 @@
 CFLAGS += -g -Wall -I../client -I../server -lpthread -std=c++11
-PROGS = server_epoll client_epoll
+PROGS = server client
 
 all: $(PROGS)
 
-server_epoll: server_epoll.cpp
+server: server_epoll.cpp
 	g++ $(CFLAGS) -o $@ $< ../server/socket_server.o
 
-client_epoll: client_epoll.cpp
+client: client_select.cpp
 	g++ $(CFLAGS) -o $@ $< ../client/socket_client.o
 
 clean:
